<resources>
    <string name="app_name">SAE Dashboard</string>
    <string name="example">Example</string>
    <string name="settings">Settings</string>
    <string name="console">Console</string>
    <string name="charge">Charge</string>
    <string name="charging">Charging</string>
    <string name="json_unloaded">JSON Unloaded</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="json_loaded">JSON loaded</string>
    <string name="reverse">Reverse</string>
    <string name="usb_serial">USB Serial</string>
    <string name="controls">Controls</string>
    <string name="clear_console">Clear Console</string>
    <string name="debug">Debug</string>
    <string name="can_message">CAN Message</string>
    <string name="can_echo">CAN Echo</string>
    <string name="test_ui">Test UI</string>
    <string name="ascii">Ascii</string>
    <string name="hex">Hex</string>
    <string name="raw">Raw</string>
    <string name="current_state">Current State</string>
    <string name="console_text_scroller">Console Text Scroller</string>
    <string name="console_line_format">Lines: %04d/5000</string>
    <string name="console_error_format">Errors: %04d</string>
    <string name="console_status_format">Status: %-13s</string>
    <string name="scroll_to_end">Scroll to end</string>
    <string name="indicators_lag_ms_format">%d ms</string>
    <string name="indicators_lag_s_format">%.3g s</string>
    <string name="lag">Lag</string>
    <string name="fault">Fault</string>
    <string name="waiting">Waiting</string>
    <string name="mph">MPH</string>
    <string name="console_mode_format">Mode: %-5s</string>
    <string name="update_json">Update JSON</string>
    <string name="download">Download</string>
    <string name="scan_qr_gif">Scan QRGif</string>
    <string name="find_json_file">Find JSON File</string>
    <string name="delete">Delete</string>
    <string name="pack_power">Pack Power</string>
    <string name="battery_charge">Battery Charge</string>
    <string name="limit_format">Limit: %dW</string>
    <string name="log_scroller">Log scroller</string>
    <string name="show">Show</string>
    <string name="upload">Upload</string>
    <string name="listed_file_fail">Failed to get info</string>
    <string name="delete_all">Delete All</string>
    <string name="update_all">Update All</string>
    <string name="scroll_to_start">Scroll to start</string>
    <string name="confirm_this_code_matches_on_both_devices">Confirm this code matches on both devices</string>
    <string name="dialog_code_placeholder">0000</string>
    <string name="accept_connection_to">Accept connection to </string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="nearby_switch_text">Nearby</string>
    <string name="submit">Submit</string>
    <string name="enter_value">Enter value</string>
    <string name="_0">0</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="current">Current</string>
    <string name="active_value_name_here">Active value name here</string>
    <string name="id">ID:</string>
    <string name="dashboard_icon">Dashboard Icon</string>
    <string name="sae_dashboard_app_2022">SAE Dashboard App 2022</string>
    <string name="this_app_is_used_for_the_society_of_automotive_engineers_club_at_illinois_tech_fsae_iit">This app is used for the Society of Automotive Engineers club at Illinois Tech ( FSAE @ IIT )</string>
    <string name="the_main_use_of_this_app_is_to_interface_with_a_microcontroller_over_usb_serial">The main use of this app is to interface with a microcontroller over USB serial to display data on a car dashboard like setup</string>
    <string name="USB">USB</string>
    <string name="toast_message">Toast message</string>
    <string name="right_temp_title">Right Temp</string>
    <string name="left_temp_title">Left Temp</string>
</resources>